[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Fonts/titanOneRegular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Textures/pauseNotPaused.png" type="Texture" id=2]
[ext_resource path="res://Resources/Textures/homeButton.png" type="Texture" id=3]
[ext_resource path="res://EndlessGame/InGameGUI/inGameGUIEndless.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
extra_spacing_bottom = -10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 90
use_filter = true
font_data = ExtResource( 1 )

[node name="inGameGUICanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 4 )

[node name="inGameGUIMain" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 200.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUIBackground" type="ColorRect" parent="inGameGUIMain"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeInfoContainer" type="MarginContainer" parent="inGameGUIMain"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -270.0
margin_bottom = 200.0
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lifeInfoSplitter" type="HSplitContainer" parent="inGameGUIMain/lifeInfoContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 270.0
margin_bottom = 170.0
custom_constants/separation = 10
split_offset = 90
dragger_visibility = 2

[node name="livesIconMargin" type="MarginContainer" parent="inGameGUIMain/lifeInfoContainer/lifeInfoSplitter"]
margin_right = 90.0
margin_bottom = 140.0
custom_constants/margin_top = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="livesIcon" type="TextureRect" parent="inGameGUIMain/lifeInfoContainer/lifeInfoSplitter/livesIconMargin"]
margin_top = 25.0
margin_right = 90.0
margin_bottom = 115.0
expand = true
stretch_mode = 5

[node name="livesLabel" type="Label" parent="inGameGUIMain/lifeInfoContainer/lifeInfoSplitter"]
margin_left = 90.0
margin_right = 240.0
margin_bottom = 140.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "111"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButtonContainer" type="MarginContainer" parent="inGameGUIMain"]
margin_right = 200.0
margin_bottom = 200.0
custom_constants/margin_right = 45
custom_constants/margin_top = 45
custom_constants/margin_left = 45
custom_constants/margin_bottom = 45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButton" type="TextureButton" parent="inGameGUIMain/pauseButtonContainer"]
margin_left = 45.0
margin_top = 45.0
margin_right = 155.0
margin_bottom = 155.0
rect_clip_content = true
size_flags_vertical = 3
button_mask = 7
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButtonContainer" type="MarginContainer" parent="inGameGUIMain"]
margin_left = 200.0
margin_right = 400.0
margin_bottom = 200.0
custom_constants/margin_right = 100
custom_constants/margin_top = 45
custom_constants/margin_left = -10
custom_constants/margin_bottom = 45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButton" type="TextureButton" parent="inGameGUIMain/menuButtonContainer"]
margin_left = -10.0
margin_top = 45.0
margin_right = 100.0
margin_bottom = 155.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="scoreInfoVSplit" type="VSplitContainer" parent="inGameGUIMain"]
margin_left = 320.0
margin_right = 760.0
margin_bottom = 200.0
split_offset = -50
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreStringMargin" type="MarginContainer" parent="inGameGUIMain/scoreInfoVSplit"]
margin_right = 440.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 20

[node name="scoreStringLabel" type="Label" parent="inGameGUIMain/scoreInfoVSplit/scoreStringMargin"]
margin_top = 20.0
margin_right = 440.0
margin_bottom = 56.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreMargin" type="MarginContainer" parent="inGameGUIMain/scoreInfoVSplit"]
margin_top = 56.0
margin_right = 440.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scoreLabel" type="Label" parent="inGameGUIMain/scoreInfoVSplit/scoreMargin"]
margin_right = 440.0
margin_bottom = 144.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButtonTween" type="Tween" parent="."]

[node name="menuButtonScaleTween" type="Tween" parent="."]

[node name="menuButtonPositionTween" type="Tween" parent="."]

[connection signal="pressed" from="inGameGUIMain/pauseButtonContainer/pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="inGameGUIMain/menuButtonContainer/menuButton" to="." method="_on_menuButton_pressed"]
